Added simple mock device script for continuous data generation. Actually implemented the device repository. Added scripts to start and stop repositories.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /healthmonitorui/.idea
 /healthmonitorapi/.idea
 /healthmonitorapi/healthmonitorapi
+/healthmonitormockdevice/healthmonitormockdevice
 /healthmonitorui/.vscode
 /healthmonitorui/*.suo
 /healthmonitorui/*.ntvs*
