Added validator service and basic logic for consuming messages.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /healthmonitorui/.idea
 /healthmonitorapi/.idea
 /healthmonitorapi/healthmonitorapi
+/healthmonitorvalidator/.idea
+/healthmonitorvalidator/healthmonitorvalidator
 /healthmonitormockdevice/healthmonitormockdevice
 /healthmonitorui/.vscode
 /healthmonitorui/*.suo
