--- a/healthmonitorui/package.json
+++ b/healthmonitorui/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "luxon": "^1.24.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "weekstart": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -21,6 +23,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-datetime": "^1.0.0-beta.13",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
