--- a/healthmonitoroperational/docker/docker-compose.yml
+++ b/healthmonitoroperational/docker/docker-compose.yml
@@ -13,9 +13,10 @@ services:
     environment:
       - node.name=es01
       - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es02,es03
-      - cluster.initial_master_nodes=es01,es02,es03
+      - discovery.seed_hosts=es02
+      - cluster.initial_master_nodes=es01,es02
       - bootstrap.memory_lock=true
+      - xpack.ml.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
@@ -25,7 +26,7 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - /home/damian/go/src/healthmonitor/healthmonitordata/elasticsearch/data01:/usr/share/elasticsearch/data
+      - /home/visanmihaidamian/go/src/healthmonitor/healthmonitordata/elasticsearch/data01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
     networks:
@@ -37,9 +38,10 @@ services:
     environment:
       - node.name=es02
       - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es01,es03
-      - cluster.initial_master_nodes=es01,es02,es03
+      - discovery.seed_hosts=es01
+      - cluster.initial_master_nodes=es01,es02
       - bootstrap.memory_lock=true
+      - xpack.ml.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
@@ -49,33 +51,9 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - /home/damian/go/src/healthmonitor/healthmonitordata/elasticsearch/data02:/usr/share/elasticsearch/data
+      - /home/visanmihaidamian/go/src/healthmonitor/healthmonitordata/elasticsearch/data02:/usr/share/elasticsearch/data
     ports:
       - 9201:9201
-    networks:
-      - elastic
-
-  es03:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
-    container_name: es03
-    environment:
-      - node.name=es03
-      - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es01,es02
-      - cluster.initial_master_nodes=es01,es02,es03
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    volumes:
-      - /home/damian/go/src/healthmonitor/healthmonitordata/elasticsearch/data03:/usr/share/elasticsearch/data
-    ports:
-      - 9202:9202
     networks:
       - elastic
 
@@ -96,7 +74,7 @@ services:
     ports:
       - 9042:9042
     volumes:
-      - /home/damian/go/src/healthmonitor/healthmonitordata/cassandra/data:/var/lib/cassandra
+      - /home/visanmihaidamian/go/src/healthmonitor/healthmonitordata/cassandra/data:/var/lib/cassandra
 
   zookeeper:
     image: 'bitnami/zookeeper:latest'
@@ -108,7 +86,7 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
     volumes:
-      - /home/damian/go/src/healthmonitor/healthmonitordata/zookeeper/data:/var/lib/zookeeper/data
+      - /home/visanmihaidamian/go/src/healthmonitor/healthmonitordata/zookeeper/data:/var/lib/zookeeper/data
 
   kafka:
     image: 'bitnami/kafka:latest'
@@ -124,4 +102,4 @@ services:
     depends_on:
       - zookeeper
     volumes:
-      - /home/damian/go/src/healthmonitor/healthmonitordata/kafka/data:/var/lib/kafka/data
+      - /home/visanmihaidamian/go/src/healthmonitor/healthmonitordata/kafka/data:/var/lib/kafka/data
